moved NavLink to NavBar to have access to the closeMenu function when clicking on a link. Removed the arrows from the HTML in slick library. Removed ununcessary comments. Fixed navigation layout on mobile

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,11 +1,9 @@
-// _navbar.scss
-
-@use "../base/settings" as *;
+@use '../base/settings' as *;
 
 .nav {
-  position: relative; // add this to create a positioned ancestor for the
-  width: 100%;
-  height: 7em;
+  position: relative;
+  // width: 100%;
+  // height: 7em;
   background-color: $navBackground;
   display: flex;
   justify-content: space-between;
@@ -28,14 +26,15 @@
     justify-content: center;
     font-size: 2rem;
     gap: 2rem;
-    padding: 10rem 0 3rem 0;
+    // padding: 10rem 0 3rem 0;
+    // padding: 8rem 0 1rem 0;
+    // padding: 0rem 0 1rem 0;
   }
 
   .burger-menu {
     height: 2.9rem;
     display: flex;
     flex-direction: column;
-    // align-items: flex-start;
     justify-content: space-between;
     cursor: pointer;
 
@@ -71,9 +70,10 @@
   width: 100%;
   height: 100vh;
   background-color: $navBackground;
-  position: absolute;
-  top: 0;
-  z-index: 1;
+  // display: flex;
+  // position: absolute;
+  // top: 0;
+  // z-index: 1;
 
   &.hidden {
     display: none;
@@ -105,7 +105,6 @@
 
 @media (min-width: 45em) {
   .nav {
-    //can you change aria-expanded to false in css
     .burger-menu {
       display: none;
     }
